--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,23 @@
-h1{
-    color: red;
-    text-align: center;
-    font-size: 58px;
+:root {
+    font-size: 16px;
+    font-family: 'Open Sans';
+    --text-primary: #b6b6b6;
+    --text-secondary: #ececec;
+    --bg-primary: #23232e;
+    --bg-secondary: #141418;
+    --transition-speed: 600ms;
+  }
+  
+  main {
+    margin-left: 5rem;
+    padding: 1rem;
+  }
+.nav.bar{
+    display: flex;
+  align-items: center;
+  height: 5rem;
+  color: var(--text-primary);
+  text-decoration: none;
+  filter: grayscale(100%) opacity(0.7);
+  transition: var(--transition-speed);
 }
