--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,20 @@
   filter: grayscale(100%) opacity(0.7);
   transition: var(--transition-speed);
 }
+::-webkit-scrollbar{
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #ececec;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track{
+  box-shadow: inset 0px 0px 5px gray;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background: gray;
+}
