--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,26 @@
 :root {
-    font-size: 16px;
-    font-family: 'Open Sans';
-    --text-primary: #b6b6b6;
-    --text-secondary: #ececec;
-    --bg-primary: #23232e;
-    --bg-secondary: #141418;
-    --transition-speed: 600ms;
-  }
-  
-  main {
-    margin-left: 5rem;
-    padding: 1rem;
-  }
-.nav.bar{
-    display: flex;
-  align-items: center;
-  height: 5rem;
-  color: var(--text-primary);
-  text-decoration: none;
-  filter: grayscale(100%) opacity(0.7);
-  transition: var(--transition-speed);
+  font-size: 16px;
+  --text-primary: #b6b6b6;
+  --text-secondary: #ececec;
+  --bg-primary: #23232e;
+  --bg-secondary: #141418;
+  --transition-speed: 600ms;
 }
+  
+main {
+  font-family: 'Open Sans';
+  margin-left: 10rem;
+  padding: 1rem;
+}
+.nav_bar{
+  display: flex;
+  flex-direction: column;
+  height: 0px;
+  width: 50px;
+}
+
 ::-webkit-scrollbar{
-  width: 12px;
+  width: 15px;
 }
 
 ::-webkit-scrollbar-thumb{
